--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
       "module": "commonjs",
       "declaration": true,
       "outDir": "./lib",
+      "lib": ["es2015"],
       "strict": true
     },
     "include": ["src"],
