--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,9 @@
       "module": "commonjs",
       "declaration": true,
       "outDir": "./lib",
-      "lib": ["es2015"],
+      "lib": ["es2015", "dom"],
       "strict": true
     },
-    "include": ["src"],
+    "include": ["src", "./typings-custom/**/*.ts"],
     "exclude": ["node_modules", "**/__tests__/*"]
   }
