--- a/package.json
+++ b/package.json
@@ -43,6 +43,12 @@
   },
   "dependencies": {
     "@types/geojson": "^7946.0.7",
-    "query-overpass": "^1.5.4"
+    "@types/lodash": "^4.14.144",
+    "axios": "^0.19.0",
+    "lodash": "^4.17.15",
+    "md5": "^2.2.1",
+    "query-overpass": "^1.5.4",
+    "wikidata-sdk": "^7.0.7",
+    "wikimedia-commons-file-path": "^1.2.0"
   }
 }
