--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
       "module": "commonjs",
       "declaration": true,
       "outDir": "./lib",
-      "lib": ["es2015", "dom"],
+      "lib": ["es2015", "es2016", "dom"],
       "strict": true
     },
     "include": ["src", "./typings-custom/**/*.ts"],
