--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/geojson": "^7946.0.7",
     "@types/lodash": "^4.14.144",
     "axios": "^0.19.0",
+    "haversine": "^1.1.1",
     "lodash": "^4.17.15",
     "md5": "^2.2.1",
     "query-overpass": "^1.5.4",
