--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "haversine": "^1.1.1",
     "lodash": "^4.17.15",
     "md5": "^2.2.1",
+    "npm": "^6.12.0",
     "query-overpass": "^1.5.4",
     "wikidata-sdk": "^7.0.7",
     "wikimedia-commons-file-path": "^1.2.0"
