--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
+    "docs": "typedoc --out dist/docs --mode modules",
     "test": "jest --config jestconfig.json",
-    "build": "tsc && webpack",
+    "build": "tsc && webpack && npm run docs",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
     "lint": "tslint -p tsconfig.json",
     "prepare": "npm run build",
@@ -37,6 +38,7 @@
     "ts-loader": "^6.2.0",
     "tslint": "^5.20.0",
     "tslint-config-prettier": "^1.18.0",
+    "typedoc": "^0.15.0",
     "typescript": "^3.6.4",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9"
