--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
-    "docs": "typedoc --out docs --mode modules",
+    "docs": "typedoc --out docs --mode file",
     "test": "jest --config jestconfig.json",
     "build": "tsc && webpack && npm run docs",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
@@ -31,11 +31,11 @@
   },
   "homepage": "https://github.com/mmmatthew/open2json#readme",
   "devDependencies": {
-    "@types/jest": "^24.0.19",
+    "@types/jest": "^24.0.20",
     "jest": "^24.9.0",
     "prettier": "^1.18.2",
     "ts-jest": "^24.1.0",
-    "ts-loader": "^6.2.0",
+    "ts-loader": "^6.2.1",
     "tslint": "^5.20.0",
     "tslint-config-prettier": "^1.18.0",
     "typedoc": "^0.15.0",
@@ -50,7 +50,6 @@
     "haversine": "^1.1.1",
     "lodash": "^4.17.15",
     "md5": "^2.2.1",
-    "npm": "^6.12.0",
     "query-overpass": "^1.5.4",
     "wikidata-sdk": "^7.0.7",
     "wikimedia-commons-file-path": "^1.2.0"
