--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "open2json",
   "version": "2.0.1",
   "description": "Collect and merge elements from wikidata and OpenStreetMap",
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
+  "main": "lib/src/index.js",
+  "types": "lib/src/index.d.ts",
   "scripts": {
     "docs": "typedoc --out docs --mode file",
     "test": "jest --config jestconfig.json",
