--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "docs": "typedoc --out docs --mode file --toc Provider,queryOsm,queryWikidata,standardizeOsm,standardizeWikidata,conflate",
     "test": "jest --config jestconfig.json",
-    "build": "tsc && webpack && npm run docs",
+    "build": "tsc && webpack",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
     "lint": "tslint -p tsconfig.json",
     "prepare": "npm run build",
