remove unused package

--- a/package.json
+++ b/package.json
@@ -51,7 +51,6 @@
     "lodash": "^4.17.15",
     "md5": "^2.2.1",
     "query-overpass": "^1.5.4",
-    "wikidata-sdk": "^7.0.7",
-    "wikimedia-commons-file-path": "^1.2.0"
+    "wikidata-sdk": "^7.0.7"
   }
 }
